--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,7 +69,7 @@
       display: flex;
     justify-content: space-between;
     height: 80px;
-    z-idenx: 1;
+    z-index: 1;
     width: 100%;
     max-width: 1300px;
     padding: 0;
