--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,36 @@
   .navbar__links:hover{
     color: #17d9f0;
     transition: all 0.5s ease;
-  } 
+  }
+  body, html{
+    height: 100%;
+    background-color: #ff0844;
+  }
+  .welcome{
+    text-align: center;
+    background-color: #ff0844;
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .poke-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: space-between;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1200px;
+  }
+  .pokemon{
+    background-color: #eee;
+    border-radius: 20px;
+    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+  }
+
   @media screen and (max-width: 960px){
     .navbar__container{
       display: flex;
